<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/about_img"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/about_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/AboutCardViewStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                app:cardCornerRadius="@dimen/dimen_2"
                app:cardElevation="@dimen/dimen_2"
                app:contentPadding="@dimen/dimen_3">

                <TextView
                    style="@style/AboutTextViewStyle"
                    android:text="@string/about_author"
                    android:textSize="16sp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/AboutCardViewStyle"
                app:cardCornerRadius="@dimen/dimen_2"
                app:cardElevation="@dimen/dimen_2"
                app:contentPadding="@dimen/dimen_3">

                <TextView
                    android:id="@+id/tv_about_contact"
                    style="@style/AboutTextViewStyle"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_contact"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/AboutCardViewStyle"
                app:cardCornerRadius="@dimen/dimen_2"
                app:cardElevation="@dimen/dimen_2"
                app:contentPadding="@dimen/dimen_3">

                <TextView
                    android:id="@+id/tv_about_blog"
                    style="@style/AboutTextViewStyle"
                    android:text="@string/about_blog"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/AboutCardViewStyle"
                app:cardCornerRadius="@dimen/dimen_2"
                app:cardElevation="@dimen/dimen_2"
                app:contentPadding="@dimen/dimen_3">

                <TextView
                    android:id="@+id/tv_about_github"
                    style="@style/AboutTextViewStyle"
                    android:text="@string/about_project"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/AboutCardViewStyle"
                app:cardCornerRadius="@dimen/dimen_2"
                app:cardElevation="@dimen/dimen_2"
                app:contentPadding="@dimen/dimen_3">

                <TextView
                    style="@style/AboutTextViewStyle"
                    android:text="@string/about_project_desc"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>